*** Unreleased ***
- Enhancements
Include symfony framework
Ability to request holiday in days (optionnal)
Add a 2nd notifications workflow
Ability to check permissions on kernel.request event
Ability to add documents on absences
Ability to change user password

-Fixes
Add raw filter on agent tamplates for fields services, right and skills
Fix undefined indexes on statistiques/service.php & statut.php

*** Version 19.10.00       (2019-10-31)   ***
- Enhancements
Allow planning comments to be always displayed.
Show a short 3 digits version number on footer
add project information in composer
hash passwords improvement
Improves performances on statistics pages
LDAP authentication improvement

- Fixes
Do not import deleted agents
Fix site verification on structure management

*** Version 19.04.03       (2019-07-26)   ***
- Fixes
Fix misallocation of rights in multisites mode
Fix bug #86, Wrong CAS version numbers

*** Version 19.04.02       (2019-07-13)   ***
- Fixes
Fix the error that prevented the import of some plannings
Imports gray cells when importing plannings
Prioritizes the absence class over the out-of-work-time class in planning views

*** Version 19.04.01       (2019-05-17)   ***
- Fixes
Optimization of statistics: avoid timeout on statistic pages for large dataset
Fix version checks in setup/maj.php
Fix README.md markdown format

- Enhancements
Make ICS import compatible with Google invitations and the "Hamac" format

*** Version 19.04          (2019-03-28)   ***
- Plumbing
Implements Doctrine ORM
Include conges plugin into the core

- Enhancements
Move the call to the update script to init.php
Define planning unit's emails site by site
Allow more than one over time recovery per day
Planning template import: show agents out of their work timetable in a red cell
ICS importation : check attendees confirmation and update absences validation
Over time recovery: create a notifications system
GDPR: Anonymize personal data when deleting users