@@ -8,8 +8,9 @@ Ability to add documents on absences
 Ability to change user password
 
 -Fixes
-Add raw filter on agent tamplates for fields services, right and skills
+Add raw filter on agent templates for fields services, right and skills
 Fix undefined indexes on statistiques/service.php & statut.php
+Fix checking email settings on configuration page
 
 *** Version 19.10.00       (2019-10-31)   ***
 - Enhancements
